--- a/STM32F7xx_Driver/Makefile
+++ b/STM32F7xx_Driver/Makefile
@@ -1,38 +1,46 @@
+PLATFORM ?= $(PLATFORM)
+TOP ?= $(TOP)
 
-HALSRC := $(TOP)/common/STM32F7xx_Driver
+include $(TOP)/configs/$(PLATFORM)/boot.mk
 
-CCINC := -I$(HALSRC)/Inc \
-	-I$(HALSRC)/CMSIS/Device/ST/STM32F7xx/Include \
-	-I$(HALSRC)/CMSIS/Include \
-	-I$(TOP)/Inc \
-	-I$(TOP)/ulib/pub \
-	-I$(TOP)/ulib/arch
+CCFLAGS := $(CCFLAGS_MK)
+CCDEFS := $(CCDEFS_MK)
+CCINC := $(CCINC_MK)
+CCINC += -I$(TOP)/main/Inc \
+		-I$(TOP)/common/Utilities/JPEG \
+		-I$(TOP)/ulib/pub \
+		-I$(TOP)/ulib/arch \
+		$(HALINC_MK)
+
+f769_bsp :
+	mkdir -p ./.output/bsp/src
+	mkdir -p ./.output/bsp/obj
+
+	cp -r ./BSP/STM32F769I-Discovery/* ./.output/bsp/src
+	cp -r ./BSP/Components ./.output/bsp/
+	cp Makefile ./.output/bsp
+
+	$(MAKE) _f769_bsp TOP=$(TOP) PLATFORM=$(PLATFORM) -C ./.output/bsp
+
+	mv ./.output/bsp/*.o ./.output/bsp/obj/
 
 f769_hal :
-	mkdir -p ./.output
-	mkdir -p ./.output/obj
-	mkdir -p ./.output/lib
+	mkdir -p ./.output/hal/src
+	mkdir -p ./.output/hal/obj
 
-	cp -r ./Src/* ./.output/
-	cp Makefile ./.output/
+	cp -r ./Src/* ./.output/hal/src
+	cp Makefile ./.output/hal/src
 
-	$(MAKE) _f769_hal TOP=$(TOP) -C ./.output
+	$(MAKE) _f769_hal TOP=$(TOP) -C ./.output/hal/src
 
-CCFLAGS := $$CCFLAGS_TOP
-CCDEFS := $$CCDEFS_TOP
-CC := $$CCBIN_TOP
-
-CCFLAGS_F769 :=  -mcpu=cortex-m7 -fsingle-precision-constant -Wdouble-promotion \
-		-mthumb -mthumb-interwork
-
-CCDEFS_F769 := -DSTM32F769xx -D__ARCH_ARM_M7__
-CCINC_F769 := -I$(TOP)/ulib/arch/Arm/m7/inc
+	mv ./.output/hal/src/*.o ./.output/hal/obj/
 
 _f769_hal :
-	$(CC) $(CCFLAGS) $(CCINC) $(CCDEFS) $(CCINC_F769) $(CCFLAGS_F769) $(CCDEFS_F769) -c ./*.c
+	$(CC) $(CCFLAGS) $(CCINC) $(CCDEFS) -c ./*.c
 
-	mv ./*.o ./obj/
-	ar rcs ./lib/hal.a ./obj/*.o
+_f769_bsp :
+	$(CC) $(CCFLAGS) $(CCINC) $(CCDEFS) -c ./Components/*/*.c
+	$(CC) $(CCFLAGS) $(CCINC) $(CCDEFS) -c ./src/*.c
 
 clean :
 	rm -rf ./.output
